<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="166dp"
        android:layout_height="109dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="51dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="194dp"
        android:layout_height="36dp"
        android:text="@string/ValueLogin"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="571dp" />

    <Button
        android:id="@+id/btnregister"
        android:layout_width="161dp"
        android:layout_height="35dp"
        android:text="@string/ValueRegister"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="626dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Contraseña"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="388dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ValueDocument"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="255dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ValuePassword"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="362dp" />

    <EditText
        android:id="@+id/etdocument"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="DNI"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="287dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="187dp" />

    <Spinner
        android:id="@+id/spnType"
        android:layout_width="199dp"
        android:layout_height="36dp"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="474dp" />

</androidx.constraintlayout.widget.ConstraintLayout>