<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout_adm_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentAdm.DashboardAdm">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="87dp"
        android:text="@string/ValueTypeTwo"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegisterAdm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/ValueRegisterAdm"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnReportAdm"
        app:layout_constraintEnd_toStartOf="@+id/btnReportAdm"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnReportAdm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="160dp"
        android:text="@string/ValueReportAdm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnRegisterAdm" />

</androidx.constraintlayout.widget.ConstraintLayout>